--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume:  arn:aws:iam::539935451710:role/GithubActionsRole
-          aws-region: us-east-1
+          aws-region: ap-south-1
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
